feat: add downloadable resume PDF to website

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1 class="career-logo">
           <a href="#">Career<span>.io</span></a>
         </h1>
-        <button>Download Resume</button>
+        <a href="assets/documents/pdf/abdullah_al_mamun.pdf" download="Abdullah Al Mamun"><button>Download Resume</button></a>
       </nav>
     </header>
 
